--- a/source/_posts/2013-05-30-spanner.markdown
+++ b/source/_posts/2013-05-30-spanner.markdown
@@ -9,7 +9,10 @@ published: true
 
 ##What is Spanner?
 
-Spanner is a highly distributed, externally consistent database.
+Spanner is a highly distributed, externally consistent database
+developed by Google.  It provides replication and transactions over a
+geographically distributed set of servers.  Spanner uses time bounds,
+Paxos, and two-phase commit.
 
 ##Interesting ideas
 
@@ -21,14 +24,16 @@ in order to deal with independently managed shards.
 ##Subtleties
 
 TrueTime guarantees one thing: that the "absolute" time is within the interval.
-Since Spanner commits only when TT.now.after(timestamp) is true, we are
-guaranteed that from now on TT.now.latest() will always be larger than the
+Since Spanner commits only when <code>TT.now.after(timestamp)</code> is true, we are
+guaranteed that from now on <code>TT.now.latest()</code> will always be larger than the
 commited timestamp on all servers.
 
 ##Questions
 
-Why is the write throughput so low??
-Why is the throughput experiment CPU bound??
+* **Why is the write throughput so low?**  4K ops/sec for one server not running Paxos and not waiting for any
+  other commit times seems very low.
+
+* **Why is the throughput experiment CPU bound?**
 
 
 [6.824 notes](http://pdos.csail.mit.edu/6.824/notes/l07.txt)
