--- a/source/_posts/2013-06-06-pacifica.markdown
+++ b/source/_posts/2013-06-06-pacifica.markdown
@@ -9,7 +9,8 @@ published: true
 
 ## Why are we reading PacificA?
 
-In the PacificA paper, the authors describe very clearly how to
+In the [PacificA paper](http://research.microsoft.com/apps/mobile/Publication.aspx?id=66814), 
+the authors describe very clearly how to
 properly implement a primary/backup replicated storage layer with
 strong consistency.
 
