some edits to MDCC

--- a/source/_posts/2013-07-25-mdcc.markdown
+++ b/source/_posts/2013-07-25-mdcc.markdown
@@ -16,21 +16,22 @@ messages between data centers (often > 100ms).  Existing protocols
 use forms of two phase commit which incur 3 blocking round trips
 between data centers.
 
-MDCC introduces a new cross data center transaction protocol for
+[MDCC](https://amplab.cs.berkeley.edu/wp-content/uploads/2013/03/mdcc-eurosys13.pdf) 
+introduces a new cross data center transaction protocol for
 transactions over key-value stores (no range scans) that uses many
-forms of paxos to achieve 1 synchronous cross-data center message
+forms of Paxos to achieve one synchronous cross-data center message
 in the common case.
 
+A similar system, Megastore, uses per-shard Paxos groups to replicate
+between datacenters.  Unfortunately, heavy conflicts in Megastore
+reduce performance to around four transactions per second.
 
-* >100ms Latencies between data centers
-* 2PC uses too many round trips
-  * Megastore uses paxos per-shard.  Heavy conflicts reduces performance to 4 xacts per second
-  * Spanner has snapshot consistency, but writes are still slow
 
 ###MDCC Goals
 
+MDCC aims to have the following properties:
 
-**Read commited isolation**: meaning transactions never read records
+**Read-commited isolation**: Transactions never read records
 that have not been fully committed.  The paper notes that this is
 the form that most commercial and open source databases provide,
 so ensuring this level of consistency is sufficient.
@@ -44,7 +45,7 @@ it.
 most recent value.
 
 **Low latency**: Minimize number of *synchronous* roundtrips -- in
-this case to 1.
+this case to one.
 
 **Costs scale to true transaction overlap**: There should not be
 large fixed costs incurred for each transaction commit.  Rather,
@@ -54,21 +55,21 @@ between transactions.
 **Integrity Constraints**: Support some forms of integrity Constraints.
 The paper discusses FIELD >/=/< VALUE type constraints.
 
-### Bulleted List of Key Ideas
+### Key Ideas
 
 * Paxos per record
   * Awesome -- could shuffle record ownership depending on access patterns!
-* OCC (keep write sets)
-* During paxos, rather than propose the new value, propose an _option_ to
+* Optimistic concurrency control (keep write sets)
+* During Paxos, rather than propose the new value, propose an _option_ to
   update the new value.  If the option succeeds, then a later write can safely
   set the value asynchronously.
-* Move more logic into quorum nodes than in regular paxos
+* Move more logic into quorum nodes than in regular Paxos
   * Decide write-write conflicts
   * Enforce integrity constraints
 * Reduce roundtrips via
-  * multi-paxos: select master every N commits
-  * fast paxos: clients directly talk to quorum nodes
-* Reduce Conflicts
+  * multi-Paxos: select master every N commits
+  * Fast Paxos: clients directly talk to quorum nodes
+* Reduce conflicts
   * Generalized Paxos: commutative operations
   * "Demarcation protocol" conservatively figures out how many conservativy ops are allowed
 * Failure
@@ -79,19 +80,20 @@ The paper discusses FIELD >/=/< VALUE type constraints.
 
 * How does a per-record protocol affect/enable fine-grained tuple placement?
 * What to do to make repeatable reads work?
-* How does fast paxos work?
+* How does Fast Paxos work?
 * How powerful/efficient is the demarcation protocol?
 * How do run range-queries or queries that need indexes?
 
 ## How MDCC is built up.
 
-The MDCC paper flows by identifying issues with the best solution proposed so far, and 
-introducing a new technique to resolve the issues.  This post will flow in a similar manner.
+The MDCC paper flows by identifying issues with the best solution
+proposed so far, and introducing a new technique to resolve the
+issues.  This post will flow in a similar manner.
 
 ### Per-record Paxos
 
-Megastore is slow because it runs paxos at a per shard granularity.
-What if we ran paxos per record?
+Megastore is slow because it runs Paxos at a per shard granularity,
+causing false conflicts.  What if we ran Paxos per record?
 
 Paxos on a record runs as follows:
 
@@ -105,8 +107,8 @@ Paxos on a record runs as follows:
 The key idea is to add logic into the acceptor nodes to perform
 write-write detection.
 
-If I want to commit records A and B, I run paxos for each record.  
-When running paxos, instead of setting the values in the second round, 
+If I want to commit records A and B, I run Paxos for each record.  
+When running Paxos, instead of setting the values in the second round, 
 send an *option* containing the record's read and write versions. 
 If there's no write conflict, the node returns OK, otherwise NO
 
@@ -120,7 +122,8 @@ write-write conflicts can't be correctly detected.
 
 ### Supporting Failures
 
-The following sequence of action could block all nodes participating in a transaction.
+The following sequence of action could block all nodes participating
+in a transaction.
 
 * I send options to acceptors for records A and B.
 * They accept and respond to me.  The options are undecided, so they can't accept
@@ -135,15 +138,16 @@ The solution is to send my transaction state (transaction id and
 write set) along with the options.  That way if I disappear, each
 record's quorum can make a clone of me using the transaction state.
 
-**At this point, multi-record transactions using per-record paxos
-"works".  Everything after this point is to make paxos consensus run
+**At this point, multi-record transactions using per-record Paxos
+"works".  Everything after this point is to make Paxos consensus run
 faster**
 
-### Multi-paxos
+### Multi-Paxos
 
 We stil require 3 roundtrips to commit (send to master, elect master,
-pick option).  We can use paxos to elect a master for a block of rounds
-which amortizes the cost of electing a master to 0 (assuming the masters are stable).
+pick option).  We can use Paxos to elect a master for a block of
+rounds which amortizes the cost of electing a master to 0 (assuming
+the masters are stable).
 
 The communication is now
 
@@ -151,36 +155,38 @@ The communication is now
 * 0 roundtrips (amortized) to elect master for record
 * 1 roundtrip to send option to acceptors
 * 1 asynchronous roundtrip to write "commit"/"abort" on options
-* 1 asynchronous roundtrip (can be bundled with other messages) to make commit visible
+* 1 asynchronous roundtrip (can be bundled with other messages) to
+  make commit visible
 
 
-### Fast-paxos
+### Fast-Paxos
 
-We still need two synchronous roundtrips -- one to contact the master if it is in 
-another datacenter, and one to send the options.  Can we avoid the former message?
+We still need two synchronous roundtrips -- one to contact the master
+if it is in another datacenter, and one to send the options.  Can we
+avoid the former message?
 
 Yes! Fast Paxos is lets clients bypass the master to directly send
 options to the quorum nodes.  Recall that the master's job is to
 serialize the log entries.  If we want to de away with the master,
-fast paxos needs a larger quorum size (a fast quorum).  If a fast
+Fast Paxos needs a larger quorum size (a fast quorum).  If a fast
 quorum responds OK, then the client can consider the option committed.
-Otherwise it falls back to normal paxos with some details.
+Otherwise it falls back to normal Paxos with some details.
 
-None of us have read the fast-paxos paper so we were ill-equipped
+None of us had read the fast-Paxos paper so we were ill-equipped
 to work through why this section of the paper works. Read below for
-how we *think* fast paxos works based on first principles.  Read
-the fast-paxos paper to actually understand how it works.
+how we *think* Fast Paxos works based on first principles.  Read
+the fast-Paxos paper to actually understand how it works.
 
-### Generalized-paxos
+### Generalized-Paxos
 
 If my operations are all commutative, I want to avoid the cost of
 serialization.
 
-Normal paxos only allows 1 value update per round.  Generalized
-paxos allows M as long as those values are commutative.  For example,
-if in the same round David wants to increment record A by 1 and
-Jane wants to increment record A by 1, then the value of A is 2
-regardless of the log order on any of the quorum nodes.
+Normal Paxos only allows 1 value update per round.  Generalized Paxos
+allows M as long as those values are commutative.  For example, if in
+the same round David wants to increment record A by 1 and Jane wants
+to increment record A by 1, then the value of A is 2 regardless of the
+log order on any of the quorum nodes.
 
 What this means is the acceptors aren't simply writing values
 anymore, they also understand "delta operations", how they commute,
@@ -211,53 +217,55 @@ example, if each data center is collecting the local weather data
 and replicating the data, it can be pretty sure that only people
 living around the data center will want the local data.
 
-Fast-paxos is really really bad (in terms of cross datacenter
+Fast-Paxos is really really bad (in terms of cross datacenter
 roundtrips) if a collision happens.  For those cases it makes more
-sense to stick with a master and use Multi-paxos.  Figuring out
+sense to stick with a master and use Multi-Paxos.  Figuring out
 when to use each is important.  The paper provides a heuristic that
-sticks with multi-paxos and periodically tries to "upgrade" to
-fast-paxos.
+sticks with multi-Paxos and periodically tries to "upgrade" to
+fast-Paxos.
 
-That's it!  MDCC collects a number of paxos variants and puts them
+That's it!  MDCC collects a number of Paxos variants and puts them
 together into a nice cross data-center commit protocol.
 
 
 ## A Note on Fast Paxos
 
-The following were derived from first principles.
+The following was derived from first principles.
 
-The fast-paxos protocol was described (briefly) in the paper as
+The fast-Paxos protocol was described (briefly) in the paper as
 
-> Any app-server can propose an option directly to the storage (quorum) nodes, which in turn
-> promise only to accept the first proposed option.  Simple majority quorums, however, are
+> Any app-server can propose an option directly to the storage
+> (quorum) nodes, which in turn
+> promise only to accept the first proposed option.  Simple majority
+> quorums, however, are
 > no longer sufficient to leran a value and ensure safeness...
-> If a proposer receives an acknowledgment from a fast quorum, the value is safe and 
+> If a proposer receives an acknowledgment from a fast quorum, the
+> value is safe and
 > guaranteed to be committed.
 
-A classical paxos quorum requires the property that for any two quorums, Qc1 and Qc2, 
+A classical Paxos quorum requires the property that for any two
+quorums, <code>Qc1</code> and <code>Qc2</code>,
 
-  Qc1 INTERSECT Qc2 != Empty set
+  <code>Qc1 INTERSECT Qc2</code> != Empty set
 
-For fast paxos it has the requirement that for a fast quorum, Qf,
+For Fast Paxos it has the requirement that for a fast quorums,
+<code>Qf1</code> and <code>Qf2</code> and regular quorum <Qc>,
 
-  Qf1 INTERSECT Qf2 INTERSECT Qc != empty set
+  <code>Qf1 INTERSECT Qf2 INTERSECT Qc</code> != empty set
 
+One of our questions was why a simple majority, <code>Qc</code>, is
+insufficient and we need a <code>Qf > Qc</code>. The following is an
+example of when it fails.
 
-One of our questions was why a simple majority (Qc) is insufficient and we 
-need a Qf > Qc. The following is an example of when it fails.
+Safety, or correctness, in Paxos means that "At most one value can be
+learned".  One example is that even with *f* failures, a committed log
+position stays committed.
 
-
-Recall that Safety in paxos depends on two nontriviality and
-consistency.  Consistency states that "At most one value can be
-learned".  One example is that even with *f* failures, a committed
-log position stays committed.
-
-
-Lets say Qf = Qc.  Consider the following logical proposals and
-their quorums where each column is the state of an acceptor (1-5),
-and each row is the state at one paxos round.  C1, C2, C3 are clients
-(proposers).  C1 commits A and manages to communicate with acceptors
-1-3, C2 commits B and so on.
+Lets say <code>Qf = Qc = majority</code>.  Consider the following logical
+proposals and their quorums where each column is the state of an
+acceptor (1-5), and each row is the state at one Paxos round.  C1, C2,
+C3 are clients (proposers).  C1 commits A and manages to communicate
+with acceptors 1-3, C2 commits B and so on.
 
 
         1 2 3 4 5
@@ -266,7 +274,7 @@ and each row is the state at one paxos round.  C1, C2, C3 are clients
     C3  C C   C
 
 Say C1 and C2 happen concurrently, and C3 happens later (as a normal
-paxos round, or fast paxos).  Then the actual acceptances and what
+Paxos round, or Fast Paxos).  Then the actual acceptances and what
 round each node thinks its in may be
 
      1 2 3 4 5 Round (as understood by local node)
