--- a/README
+++ b/README
@@ -1,30 +1,41 @@
 Setup
 -----
 
-Requirements:
-- Ruby 1.9.3
+In order to preview and deploy:
+  Requirements:
+  - Ruby 1.9.3
 
-gem install bundler
-bundle install
+  gem install bundler
+  bundle install
 
+To just write a post, see below
 
 New post
 --------
 
-rake new_post["title"]
+If you have rake:
+  rake new_post["title"]
 
+Otherwise create a file in source/_posts with the name:
+
+year-month-day-title.markdown (see other files in the folder)
+
+add it and git push.
 
 Generate and Preview
 --------------------
 
-rake generate
-rake preview
+If you have rake:
+ rake generate
+ rake preview
 
-visit http://localhost:4000/dsrg
-
+ visit http://localhost:4000/dsrg
 
 Deploy
 ------
 
-rake generate
-rake deploy
+Only one person should be doing this.  Currently it's neha, to
+amsterdam.  If this changes, change Rakefile.
+
+ rake generate
+ rake deploy
