--- a/source/_posts/2014-01-10-epaxos.markdown
+++ b/source/_posts/2014-01-10-epaxos.markdown
@@ -4,6 +4,7 @@ title: "EPaxos"
 date: 2014-01-10 13:04
 comments: true
 categories: 
+published: false
 ---
 
 [EPaxos](https://github.com/efficient/epaxos)
